--- a/bodytreatment.html
+++ b/bodytreatment.html
@@ -15,7 +15,7 @@
     <link rel="shortcut icon" href="image/favicon.png" type="image/x-icon">
 </head>
 <body>
-    <main class="Slimming_Wrapper Filler_Wrapper Organic_Wrapper Thread_Wrapper Prp_Wrapper 
+    <main class="Slimming_Wrapper Filler_Wrapper Organic_Wrapper Thread_Wrapper Prp_Wrapper  HairTransplant_Wrapper 
     SkinTreatment_Wrapper Cosmo_Wrapper BodyTreatment_Wrapper">
         <header>
             <div class="top-social-bar">
@@ -285,21 +285,17 @@
                         <h2>Body <span>   Treatment</span></h2>
                     </div>
                     <div class="Slim_content">
-                        <p>
-                            The term 'body treatment' refers to facials, massages, belief-related therapies, rubs - any non-medical procedure that you go to a spa or center to have. A spa ritual or spa experience describes a package of different body treatments that you get on the same day: a relaxing massage, a personalized facial and reflexology, say, followed by use of the spa facilities and a light lunch.
-                        </p>
-                        <p>
-                            Different body treatments are good for different things and they are usually clear about their goals.
-                         </p>
-                         <p>
-                            You may have a fairly rigorous and rejuvenating body scrub to exfoliate, moisturize and reduce cellulite and help hydrate the skin. 
-                         </p> 
-                         <p>
-                            You could choose to firm up your stomach muscles and bottom by, for example, having a series of electromagnetic pulses passed through your body. 
-                         </p>
-                         <p>
-                             You might decide that you want to pay penance for unhealthy eating by being wrapped in algae for a few hours to be detoxified, you may choose to embark on a series of body treatments that will help you change your lifestyle and your shape, that involve diet, exercise, and therapeutic massage and counsellingThe choice are yours! Most body treatments will leave you feeling invigorated and relaxed - a powerful combination!
-                         </p>
+                      <p>
+                        Is your body smooth and firm enough? Does your skin give off a healthy glow? Does it feel relaxed? If your answer is no, then probably you need a 
+                        <b>body treatment. </b>
+                        No matter what you are going through, you need to pull out some time and let the experts look after your body. Whether it be a warm stone on your back or some natural gel dripping down your body, these treatments don't just feel good and relaxing but also offer a wide range of health and beauty benefits. 
+                      </p>
+                      <p>
+                        The term body treatment mainly refers to facials, massages, some belief related therapies and rubs. For various kind of body problem, there is a specific kind of spa treatments. Either by your wish or a recommendation from an expert, our professionals will perform the necessary treatment process with care. 
+                      </p>
+                      <p>
+                        You can get your belly muscles tightened just by passing a sequence of electromagnetic pulses. You may have a reasonably accurate and rejuvenating body scrub to exfoliate, moisturize and lessen cellulite and help hydrate the skin. Or simply you can have a message to comfort your muscles and relieve stress. 
+                      </p>
                     </div>
                 </div>
             </section> 
@@ -329,14 +325,21 @@
                 </div>
             </section>
             
-            <section class="Filler-Treatment Organic_treatment Thread-Treatment Body-Treatment"   data-aos="fade-up"
+            <section class="Filler-Treatment Organic_treatment Thread-Treatment Body-Treatment Hair-Trt-Bfr"   data-aos="fade-up"
             data-aos-easing="linear"
             data-aos-duration="1300">
                 <div class="container">
                     <div class="filler-heading">
-                        <h2>Body <span>  Treatments  areas</span></h2>
+                        <h2>Benefits Of <span>  Body Treatment</span></h2>
                     </div>
-                    <div class="Filler-content organic-peel-content Thread-cnt01">
+                    <div class="Filler-content organic-peel-content Thread-cnt01 hair-trn-Cnt01">
+                        <p>
+                            Body treatments may help stop wrinkles, decrease cellulite, and slow physical signs of ageing, leaving your skin looking younger and younger. Seaweed, salt, mud, charcoal, and mineral wraps are also excellent elements to exfoliate your skin and eliminate toxins. As with other spa services, body therapies help with your mental wellness too as they reduce stress, soothe tired muscles, and relax both your body and mind. 
+                            <b>Full body massage cost </b> is much more comprehensive then going for single body parts. Going for 
+                            <b>for full body whitening treatment </b> will be effective for you in many ways and summon extra glow in your body.
+
+                        </p>
+                        <p>Skincare is probably one of the most neglected elements of taking care of the body. Sure you wash your face, but having an extensive cleaning with a facial mask can be crucially helpful. Even do it yourself facial masks can enhance your skin nearly as well as taking a trip to the spa. Facial masks can hydrate your skin, remove toxins like oils and impurities, as well as improve the condition of your pores. All of these can lead to astonishing, healthy-looking and fresh feeling skin.</p>
                         <figure>
                             <img src="image/bodytreatment1.png" alt="img">
                         </figure>
