--- a/hairtransplant.html
+++ b/hairtransplant.html
@@ -268,18 +268,18 @@
             <section class="Slim_Service Filler-Service Prp-service">
                 <div class="container">
                     <div class="slim-heading">
-                        <h2>Hair Transplant  <span>treatment for both men and women</span></h2>
+                        <h2>Hair Transplant  <span>treatment  </span></h2>
                     </div>
                     <div class="Slim_content">
-                        <p>
-                            Good hair adds a great deal to confidence. With today’s stressful lifestyle alopecia is a common issue among men and women both. Be it unhealthy food habits, career stress or even genetic, alopecia is something every adult is embarrassed of and seeks urgent attention to. Some of the common signs of alopecia are patchy hair loss, drastic thinning of hair and of ‘course baldness. Modern day hair build solutions come with no side effects and maximum remedy to drastic hair loss leading to alopecia.
-                        </p>
-                        <p>
-                            For men, alopecia is a well-known cosmetic problem that can severely affect self-esteem. However, in some instances, hair loss in men can also be seen as a symbol of wisdom and maturity. In contrast, in today's society hair loss in women is neither culturally acceptable nor sexually appealing by any standards. 
-                        </p>
-                        <p>
-                            Yet many people fail to realize hair loss in women as a significant problem. One reason for this is that the patterns of alopecia in women are generally that of diffuse thinning rather than frank baldness. In addition, women typically have more options for compensating for hair loss through styling and coloring.
-                        </p> 
+                       <p>
+                         Today, due to a dirty environment, dirty water, poor lifestyle and unhealthy food, and consuming drugs, we are facing a lot of diseases and problems. These problems are a hair fall or baldness. Children, young, old, men, and women are all worried today due to the problem of hair loss. To get rid of it, someone uses a shampoo, some medicine, some home remedies, and a surgical procedure like a hair transplant. Everyone finds a way to get rid of this problem on their own.
+                       </p> 
+                       <p>
+                          Usually, doctors choose the means of treatment due to hair loss and its severity.
+                       </p>
+                       <p>
+                         Hair cannot be considered essential for life. Nevertheless, beautiful hair boosts confidence in a way that is impossible with any other solution. Hair loss is not a mild matter. This requires a complete medical examination so that the real cause can be revealed. While stress and genetic causes play a big role in alopecia, in the language of the common people, the problem of baldness, along with other health problems, it becomes imperative to go to reputed clinics Cosset World Hair Care(Hair transplant) to get the right solution to be done. 
+                       </p> 
                     </div>
                 </div>
             </section> 
@@ -288,42 +288,61 @@
             <section class="Benefit_Wrapper Org_wrp Thread-left-wrp Prp_wrp Micro_wrp">
                 <div class="container">
                     <div class="Benefit-heading">
-                        <h2>Five Benefits of  <span>Hair Transplant Surgery</span></h2>
+                        <h2>Benefits of   <span>Hair Transplant  </span></h2>
                     </div>
                     <div class="Benefit-content Organic-Cnt micro-cnt"> 
                      <p>
-                        A hair transplant is a medical procedure that involves obtaining hair follicles from a donor area on the patient’s scalp, and implanting them where the hair is thin. This means that follicular units or various strips of hair follicles are extracted and then transplanted in the balding areas.
+                        These procedures have been made profitable keeping in mind the many risks of hair transplant.
                     </p> 
+                    <p>Hair transplant has the following advantages:</p>
                     <div class="key-wrp">
                         <div class="key01">
-                                <h3>Improved Appearance</h3>
+                                <h3>Naturally growing hair </h3>
                                 <p>
-                                    People that seek out a hair transplant procedure will tell you it is because their baldness makes them feel disappointed with the way they look. This sort of procedure will fill in those balding areas with hair that will grow naturally. This will help them feel more confident and attractive.
+                                    In most surgeries, chemicals and medications are used, which can harm any part of the body and increase the possibility of side effects. This technique of hair transplant is beyond these things. However, there is no chemical or drug mixture of any kind in the hair transplant process.
                                 </p>
                         </div>
                         <div class="key01">
-                            <h3>Unclogs Hair Follicles.</h3>
+                            <h3>Not using any chemical or medicine </h3>
                             <p>
-                                Just like the rest of your body, hair follicles on the scalp can get clogged with a variety of substances. The most common is sebum, which is your natural oil that is secreted from the sebaceous gland in the hair follicle. This oil combines with dirt chemical residue from hair products to clog those pores right up. Scalp treatments are a great way to clear them out and reset the sebum levels. The products used in a scalp treatment combined with the gentle exfoliation and scalp massage will help to unclog any buildup in those hair follicles, which then allows the follicle to release its natural conditioning oils. A healthy follicle means healthy hair growth!
+                               In most surgeries, chemicals and medications are used, which can harm any part of the body and increase the possibility of side effects. This technique of hair transplant is beyond these things. However, there is no chemical or drug mixture of any kind in the hair transplant process.
                             </p>
                         </div>
                         <div class="key01">
-                            <h3>Stimulates Blood Flow.   </h3>
+                            <h3>Enhancing self-confidence  </h3>
                             <p>
-                                The exfoliation and massage portions of a scalp treatment helps to stimulate blood flow to your scalp, making it easier for blood to reach your follicles and deliver important nutrients. The hair that grows out of those nutrient-rich follicles will be healthy and supple! Again, a healthy follicle means healthy hair
+                                One of the main reasons why people get hair transplants is because it increases the confidence of the person. Although it is not a shame to be bald, due to baldness, the beauty of one's face deteriorates. Hence, most bald people want to maintain their beauty by getting hair transplant. Various jokes have been made on the bald people, which even when jokingly heard, the bald person feels bad. They may encounter this condition after hair transplantation. 
                             </p>
                         </div>
                         <div class="key01">
-                            <h3>Prevents Thinning And Hair Loss.</h3>
+                            <h3>Rapid Recovery </h3>
                             <p>
-                                Clogged follicles can result in a lack of hair growth. When you unclog those follicles and reset the sebum production levels, your hair has a chance to grow back much healthier! Some scalps require special products to remove an excessive amount of build-up, and some will even require medication. But if caught early enough, a simple scalp treatment done regularly can promote the growth of thicker, healthier hair.
+                                Another benefit of hair transplant is quick recovery.
                             </p>
                         </div>
                         <div class="key01">
-                            <h3>Gets Rid Of Dandruff.</h3>
+                            <h3>Looking young </h3>
                             <p>
-                                No one likes an embarrassing dandruff problem… Dandruff can be a result of either too much oil production or too little. If your scalp is producing too much oil, it irritates the scalp and causes flakiness. If it isn’t producing enough, that dryness will also result in irritation and flakiness. A scalp treatment will involve some exfoliation to get rid of all that dead skin, leaving a layer of fresh, healthy skin behind. You’ll also get a leave-in conditioner applied, which lubricates and moisturizes the scalp to promote healthy hair growth.
+                                A person with very little or no hair on his head already starts to think of himself as weak. People make fun of him. It is a simple matter that having hair on the head is to develop your personality. However, when he gets his hair transplanted, he starts living with positive thinking and feels young after seeing the change in his personality.
                             </p>
+                        </div>
+                        <div class="key01">
+                            <h3>No cost of any other maintenance </h3>
+                            <p>
+                                Hair transplant is a one-time expense. There is no other maintenance cost at all and the hair will last throughout your life without the need for any care.
+                            </p>
+                            <p>
+                                Hair keeps you young and not only socially but also helps in your career.
+                            </p>
+                        </div>
+                        <div class="key01">
+                            <h3>Cost Saving</h3>
+                             <p>
+                                Most people think that hair transplant surgery is quite expensive. But you will need to know that getting a hair transplant does not get heavy on your pocket. Once a hair transplant is done, you get a permanent solution to get rid of baldness.
+                             </p>
+                             <p>
+                                So if you want to regain the lost hair of your scalp then hair transplantation is a better solution.
+                             </p>
                         </div>
                      </div>
                     </div>
@@ -334,12 +353,9 @@
             <section class="Filler-Treatment Organic_treatment Thread-Treatment Hair-Trt-Bfr">
                 <div class="container">
                     <div class="filler-heading">
-                        <h2>Five Benefits of<span>  Hair Transplant Surgery</span></h2>
+                        <h2>Hair transplant<span> Surgery Before & after</span></h2>
                     </div>
-                    <div class="Filler-content organic-peel-content Thread-cnt01 hair-trn-Cnt01">
-                         <p>
-                            Shampooing should be done daily to remove the scabs. After about 7-10 days there should be no more traces of dried blood or scabs on your scalp. You may start washing your hair the normal way no sooner than 14 days after the transplant. If needed one can also wash the hair more than once a day after the operation.
-                         </p>
+                    <div class="Filler-content organic-peel-content Thread-cnt01 hair-trn-Cnt01"> 
                          <div class="Hair-Bfr-content">
                              <div class="lft hair-cnt01">
                                  <figure>
