--- a/lasertreatment.html
+++ b/lasertreatment.html
@@ -282,7 +282,7 @@
             data-aos-duration="1300">
                 <div class="container">
                     <div class="slim-heading">
-                        <h2>Types of laser <span>   Treatment</span></h2>
+                        <h2>Laser  <span>   Treatment</span></h2>
                     </div> 
                 </div>
             </section> 
@@ -296,82 +296,44 @@
                     <div class="Benefit-content Organic-Cnt Prp_hair">  
                        <div class="key-wrp">
                             <div class="key01">
-                            <h3>Fine Lines and Wrinkles</h3>
+                            <h3>What Is Laser Skin Resurfacing?</h3>
                                   <p>
-                                    For treating lines and wrinkles, a combination of skin resurfacing and skin-tightening procedures can be used or both can be accomplished with a more aggressive ablative laser, such as a CO2 (carbon dioxide) laser or Erbium lasers.1﻿ The CO2 laser is also commonly used for the removal of warts and skin tags and for cutting the skin in laser-assisted surgery. Pulsed dye lasers have also shown some success, along with less aggressive nonlaser, light-based treatments, such as IPL and LED photo facials. (See other light-based cosmetic applications below.) 
+                                    Laser resurfacing can decrease the appearance of sun damage, wrinkles, fine lines, irregular pigmentation and scarring. There are many different choices available for laser resurfacing.   
                                 </p>
                             </div>
-                            <div class="key01">
-                                <h3>Skin Tightening</h3>
-                                <p>
-                                    Most cosmetic laser procedures provide at least some level of superficial tightening because they produce a controlled injury of the skin, which encourages increased collagen production. For more significant tightening results, however, CO2 lasers are the laser of choice. In addition, there has been much success using nonlaser, light-based treatments, such as Titan infrared devices and Thermage radio-frequency based systems.
-                                </p>
+                             <ul>
+                                 <li>
+                                     Nonablative laser skin resurfacing is intended to boost collagen production, improving wrinkles and depressed scars by plumping them out from beneath.
+                                 </li>
+                                 <li>
+                                    Fractional resurfacing reduces uneven pigmentation and boosts collagen production to enhance skin texture, decrease wrinkles and lessen scarring. The laser operates by creating numerous, microscopic columns in the skin. Treatments can be either ablative or microablative, and both the number of treatments and the degree of the recovery period will depend on the appropriate type of laser that is used.
+                                 </li>
+                                 <li>
+                                    CO2 resurfacing offers the most exciting results, but downtime is notable. This procedure is kept for patients with extensive wrinkling and photodamage or for patients with critical acne scarring.
+                                 </li>
+                             </ul> 
+                             <div class="key01">
+                                <h3>ADVANTAGES OF LASER SKIN TREATMENT</h3> 
+                                    <p>
+                                       The advantages of using lasers are decreased blood loss, decrease in postoperative distress, lowering of wound contamination, decrease in growth of certain cancers and healthier wound healing. Lasers can be utilised to reduce wrinkles nearby the lips or eyes and sometimes the whole face. The laser mollifies fine wrinkles and eliminates certain blemishes on the face. Certain types of birthmarks react exceptionally well to laser treatment. The laser effects a decrease in the size of unnatural blood vessels that cause these birthmarks. This in turn fosters a lightening in the colour of the birthmark. Skin growths, facial 'spider veins,' warts, and some tattoos can also be eliminated by laser surgery. Another method that uses lasers is hair transplant. Lasers are used to dress the area where the hair transplants will be installed.
+                                    </p> 
                             </div>
                             <div class="key01">
-                                <h3>Precancerous Lesions</h3>
-                                <p>
-                                    Almost all surgeons agree that cancerous lesions should be removed via scalpel (with a knife during surgery) to ensure clear borders and complete removal.2﻿ In addition to making sure a skin cancer has "clear margins," this assures that there is a sample for a pathologist to look at to determine exactly what the lesion was. By removing precancerous growths, such as actinic keratoses, before they have a chance to become malignant (squamous cell skin cancers), though, lasers are now routinely being used as a preventative measure. Ablative lasers, such as the CO2 and erbium: YAG, is generally chosen to remove these lesions.
-                                </p>
-                            </div> 
-                            <div class="key01">
-                                <h3>Pigmented Lesions </h3>
-                                <p>
-                                    The most commonly used lasers for the treatment of pigmented lesions, such as sunspots, age spots, melasma, and other forms of hyperpigmentation are the pulsed dye,1﻿ Nd: YAG, and fractional (Fraxel) lasers, along with nonlaser, light-based treatments, such as IPL.
-                                </p>
-                            </div> 
-                            <div class="key01">
-                                <h3>Tattoos   </h3>
-                                <p>
-                                    The most commonly used lasers for the treatment of pigmented lesions, such as sunspots, age spots, melasma, and other forms of hyperpigmentation are the pulsed dye,1﻿ Nd: YAG, and fractional (Fraxel) lasers, along with nonlaser, light-based treatments, such as IPL.
-                                </p>
-                            </div> 
-                            <div class="key01">
-                                <h3>PVascular Lesions</h3>
-                                <p>
-                                    Almost all surgeons agree that cancerous lesions should be removed via scalpel (with a knife during surgery) to ensure clear borders and complete removal.2﻿ In addition to making sure a skin cancer has "clear margins," this assures that there is a sample for a pathologist to look at to determine exactly what the lesion was. By removing precancerous growths, such as actinic keratoses, before they have a chance to become malignant (squamous cell skin cancers), though, lasers are now routinely being used as a preventative measure. Ablative lasers, such as the CO2 and erbium: YAG, is generally chosen to remove these lesions.
-                                </p>
-                            </div> 
-                            <div class="key01">
-                                <h3>Hair Removal</h3>
-                                <p>
-                                    Almost all surgeons agree that cancerous lesions should be removed via scalpel (with a knife during surgery) to ensure clear borders and complete removal.2﻿ In addition to making sure a skin cancer has "clear margins," this assures that there is a sample for a pathologist to look at to determine exactly what the lesion was. By removing precancerous growths, such as actinic keratoses, before they have a chance to become malignant (squamous cell skin cancers), though, lasers are now routinely being used as a preventative measure. Ablative lasers, such as the CO2 and erbium: YAG, is generally chosen to remove these lesions.
-                                </p>
-                            </div> 
-                            <div class="key01">
-                                <h3>Acne and Acne Scars</h3>
-                                <p>
-                                    For deeper acne scars, the CO2 laser remains the gold standard,1﻿ although more recent developments such as the erbium:YAG, fractional laser and certain nonablative lasers have shown considerable success with superficial acne scarring. For the treatment of active acne, LED technology has proven to be quite effective.
-                                </p>
-                            </div> 
+                                <h3>Laser Treatment Cost?</h3> 
+                                    <p>
+                                        At Cosset World, we have a state-of-the-art centre for cosmetic surgery and dermatology. A broad range of cosmetic surgical and non-surgical methods are available for personal enrichment. We are widely known for providing the most effective treatment of the most advanced cosmetic surgery. Our professionals keep in mind the privacy, safety and the comfort of their patients. 
+                                        <b>Skin laser treatment in Gurgaon </b>
+                                        can be easily accessed if you are willing to take a step ahead and revolutionalize your appearance.
+                                    <b>Laser skin treatment in Gurgaon</b>
+                                     can cost you depending on the type of treatment you opt for. For further details, you can contact us at any time as we are always ready to help you. 
+                                    </p> 
+                            </div>
                          </div>
                     </div>
                 </div>
             </section>
 
-            <section class="Benefit_Wrapper Org_wrp Thread-left-wrp Prp_wrp HairPigment_wrp Cosmo_Wrp2" data-aos="fade-up"
-            data-aos-easing="linear"
-            data-aos-duration="1300">
-                <div class="container">
-                    <div class="Benefit-heading">
-                        <h2>the benefits of laser  <span> treatment </span></h2>
-                    </div>
-                    <div class="Benefit-content Organic-Cnt Prp_hair">   
-                        <ul>
-                            <li>Treatment is painless  </li>
-                            <li>Highly effective for many diseases and conditions</li>
-                            <li>Eliminates pain</li>
-                            <li>Reduces the need for pharmaceuticals</li>
-                            <li>Restores normal range of motion and physical function</li>
-                            <li>Easily applied</li>
-                            <li>Deep tissue massage</li>
-                            <li>Holistic full body massage</li>
-                            <li>Back, neck and scalp massage</li>
-                            <li>Often makes surgical interventions unnecessary </li>
-                            <li>Provides a treatment alternative for patients that have not responded to other therapies</li>
-                        </ul>
-                    </div>
-                </div>
-            </section>
+            
             
             <section class="Filler-Treatment Organic_treatment Thread-Treatment Body-Treatment Laser-Treatment" data-aos="fade-up"
             data-aos-easing="linear"
