--- a/prphair.html
+++ b/prphair.html
@@ -282,67 +282,95 @@
                         <h2>PRP Hair <span> Treatment </span></h2>
                     </div>
                     <div class="Slim_content">
-                        <p>
-                            Platelet-rich plasma (PRP) is a form of blood plasma that has been enriched with platelets and growth factors. This encourages cellular growth, stimulates healing, and gives a youthful appearance to the skin. 
-                        </p>
-                        <p>
-                           Platelets are tiny cell fragments that stop bleeding and bruising and contain growth factors and natural substances that encourage cellular growth. Platelets provide a person with the building blocks for healing when sustaining a burn or cut. They transform the quality and overall appearance of the skin. 
-                        </p>
-                        <p>
-                            Not only does the PRP cause an increase in volume, but PRP also contains at least 8 growth factors that will, over a period of time, continually work as a rejuvenating agent.
-                        </p>
-                        <p>
-                            Yes the procedure is safe for all Skin types. There is no suture on treatment area and no adverse post effects. It is completely safe- US-FDA Certified.
-                        </p>
+                        <h2>PRP- Regrowth of hairs with non-interfering technique</h2>
+                      <p>
+                        Hair loss has become a common problem all across the world, both men and women are under the same hood, although reasons may vary. Some acquire this due to bad eating, sleeping or physical habits others have genetically acquired. But taking measures on time can help you sustain those remaining hairs and even regrow new hairs naturally. Those people who have already reached a stage of baldness should go for hair transplantation. But if your hair is falling at an alarming rate, still you have a pretty decent amount of them to save you should definitely go for 
+                        <b>
+                            PRP Hair Treatment. 
+                        </b>
+                      </p>
+                      <h2>
+                        What is Platelet Rich Plasma (PRP) Treatment?
+                      </h2>
+                      <p>
+                        Platelet Rich Plasma therapy is a non-operational treatment where your platelet-rich plasma from your own blood is extracted and then injected into the scalp. This process stimulates the growth factor in your blood cells to do their job and grow hairs naturally. 
+                        The platelets are the clotting cells in our blood which have the potential of accelerated healing. 
+                        <b>PRP for hair </b>
+                        hair is the perfect treatment for both men and women. Dermatologists recommend at least 4-6 concourses with an interim of approx. 4-5 weeks between each concourse for obtaining the best results. 
+                      </p>
+                      <h2>
+                        What is the process of PRP?
+                      </h2>
+                      <p>
+                        Mesenchymal stem cells contained in the human blood have growth factors, that help in the development of various aspects of the body. These cells are extracted, treated and then injected in the scalp of the targeted areas. The complete process mentioned below-   
+                      </p>
+                      <p>
+                        Sampling of blood
+                      </p>
+                      <p>Platelets separation  </p>
+                      <p>Growth factor & Concentration of plasma</p>
+                      <p>Injecting PRP</p>
+                      <h2>
+                        What is the Cost of PRP?
+                      </h2>
+                      <p>
+                          <b>PRP hair treatment </b>cost depends mainly on factors like equipment used, doctor's experience, the number of sessions attended etc. You don't need to worry about the prices when you get the best services in entire Gurugram. 
+                      </p>
                     </div>
                 </div>
             </section> 
             <!-- end---here -->
 
-            <section class="Benefit_Wrapper Org_wrp Thread-left-wrp Prp_wrp" data-aos="fade-up"
+            <section class="Benefit_Wrapper Org_wrp Thread-left-wrp Prp_wrp Filler-Service" data-aos="fade-up"
             data-aos-easing="linear"
             data-aos-duration="1300">
                 <div class="container">
                     <div class="Benefit-heading">
-                        <h2>Advantages of PRP  <span>Hair Treatment</span></h2>
+                        <h2>Advantages of    <span>PRP treatment-</span></h2>
                     </div>
-                    <div class="Benefit-content Organic-Cnt Prp_hair"> 
-                        <p>
-                            Once your hair begins to come back in, it can have tremendous benefits for your look and level of confidence. Your full head of hair can help you appear younger and, in some cases, healthier. In response, you may be more willing to face new social situations and challenges in the workplace. PRP hair therapy can benefit all patients with thinning hair. However, the results can be truly transformative if you have alopecia or an immune disorder that attacks the hair follicles.
-                         </p>
+                    <div class="Benefit-content Organic-Cnt Prp_hair Slim_content"> 
+                         <ul>
+                             <li>
+                                Attending 2-3 sessions boosts the growth of new and natural hairs, also reduces hair fall. 
+                             </li>
+                             <li>
+                                6-8 sessions increases and thickens hair quantity. 
+                             </li>
+                             <li>
+                                 We will put no scars, no cut to your skin, everything is done via a non-surgical process.
+                             </li>
+                             <li>
+                                 We won't put you at any risk, so we use your own blood for this procedure.
+                             </li>
+                             <li>
+                                 There is no wait or recovery time, therefore just after the treatment, you can walk back to work.  
+                             </li>
+                         </ul>
+                         <h2>Is PRP therapy effective for Hair Loss?</h2>
                          <p>
-                            PRP hair treatment is becoming increasingly popular thanks to its many medical advantages. These benefits include:
+                            In today's time, hairlessness and hair thinning have become prevalent among men and women, the innovative approach of activating your dormant follicle to stimulate your hair growth seems to be more reasonable. In a short amount of time, PRP therapy has gained popularity among men and women due to its safe approach. Patients suffering from extreme hair loss have found PRP therapy notably beneficial. 
                          </p>
-                       <div class="key-wrp">
-                            <div class="key01">
-                                    <h3>Safety</h3>
-                                    <p>
-                                        PRP stimulates collagen and elastin production which thickens and tightens thinning skin, effectively smoothing wrinkles and fine lines. Because it boosts collagen, it’s also a great treatment for improving overall skin texture and tone. It’s particularly good for people who suffer from rosacea or acne.
-                                    </p>
-                            </div>
-                            <div class="key01">
-                                <h3>Minimal discomfort  </h3>
-                                <p>
-                                    PRP is extremely effective for treating difficult to treat areas, such as the delicate under-eye area where clients often notice signs of aging first but where no laser can be used.
-                                </p>
-                            </div>
-                            <div class="key01">
-                                <h3>Effective</h3>
-                                <p>
-                                    Because it uses your own natural elements, PRP is very safe. It’s also not a new treatment. It’s long been recognized and used in the hospital system and in sports medicine for its effective wound healing properties since the 1970s.
-                                </p>
-                            </div>
-                            <div class="key01">
-                                <h3>Convenience</h3>
-                                <p>Thread lifts help stimulate collagen production, resulting in more youthful-looking skin. In addition, the threads pull your face taut, eliminating wrinkles and giving you an overall smoother appearance. The areas of your face where the threads are placed enjoy a sharp reduction in wrinkles and lines.</p>
-                            </div>
-                            <div class="key01">
-                                <h3>Versatile </h3>
-                                <p>
-                                    Drs.True and Dorin may recommend this treatment to replace facial hair, as well as the hair on your scalp.
-                                </p>
-                            </div>
-                         </div>
+                         <h2>
+                            Why is PRP so beneficial?
+                         </h2>
+                         <p>
+                             <b>PRP treatment for hair </b>
+                             has turned out to be the most effective and reliable method of restoring hair loss. Cosset World is one of the most trusted clinics in Gurugram specializing in no scar hair loss treatment. The qualities that make PRP treatment outstanding are-
+                         </p>
+                         <ul>
+                             <li>
+                                 A non-surgical procedure where only a tiny and thin needle is used to inject plasma makes PRP therapy comfortable. 
+                             </li>
+                             <li>
+                                 Within 60-90 minutes, the therapy gets over making it quick and comfortable.
+                             </li>
+                             <li>
+                                 With only a few understandable and easy precautions to follow, you can continue with your daily routine.
+                             </li>
+                             <li>
+                                As we only use the patient's own blood to promote hair growth, so it's totally safe and suitable for both men and women.
+                             </li>
+                         </ul>
                     </div>
                 </div>
             </section>
