--- a/slimming.html
+++ b/slimming.html
@@ -263,7 +263,7 @@
         <div class="breadcumb-wrp"> 
           <div class="sub-breadc-cnt">
              <ul class="ul1">
-                <li><a href="mailto:contact@cossetworld.com"><i class="fa fa-envelope"></i> contact@cossetworld.com</a></li>
+                <li><a href="mailto:cosset.world@gmail.com"><i class="fa fa-envelope"></i> cosset.world@gmail.com</a></li>
                 <li>    <a href="Tel:8826057629"><i class="fa fa-phone"></i> +91 8826057629</a></li>
              </ul>
              <ul class="ul2">
